Skeleton for Clustering

--- a/phase1.ipynb
+++ b/phase1.ipynb
@@ -36,8 +36,8 @@
    },
    "source": [
     "import pickle\n",
-    "import swifter\n",
-    "import pandas as pd\n",
+    "\n",
+    "import numpy as np\n",
     "from sklearn import svm\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -52,20 +52,8 @@
     "import advanced_processor_chain_factory\n",
     "import simple_processor_chain_factory"
    ],
-   "execution_count": 49,
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'analysis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-49-2419ede24e48>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mdata\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mpreprocess_data\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mvectorize_data\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mload_dataset\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 12\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mevaluation\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0manalysis\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mevaluate_models_with_data\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     13\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0madvanced_processor_chain_factory\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mImportError\u001B[0m: cannot import name 'analysis'"
-     ]
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -82,7 +70,7 @@
    },
    "source": [
     "dataset = load_dataset()\n",
-    "DEBUG = True"
+    "DEBUG = False"
    ],
    "execution_count": null,
    "outputs": []
@@ -254,7 +242,7 @@
     "\n",
     "logistic_grid = {\n",
     "    'penalty':['l2'],\n",
-    "    'C':[1, 300, 500, 700, 900],\n",
+    "    'C':[1, 300, 500, 700, 900, 2000],\n",
     "    'class_weight':['balanced'],\n",
     "    'solver':['saga'],\n",
     "    'n_jobs':[-1],\n",
@@ -623,17 +611,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "mlp_grid = {\n",
-    "    'hidden_layer_sizes':[(500, 250), (1000, 250), (500, 250, 250), (1000, 500,250)],\n",
-    "    'activation':['tanh', 'relu'],\n",
-    "    'solver':['sgd'],\n",
-    "    'alpha':[1],\n",
-    "    'learning_rate':['adaptive'],\n",
-    "    'max_iter':[1000]\n",
-    "}"
+    "    #(500, 250), (1000, 250), (500, 250, 250),\n",
+    "    'hidden_layer_sizes':[(1000, 500,250)],\n",
+    "    #'relu'\n",
+    "    'activation':['tanh', ]\n",
+    "}\n",
+    "def eval_mlp(X_train, X_test, Y_train, Y_test):\n",
+    "    best_f1 = -1\n",
+    "    best_model = None\n",
+    "    for sizes in mlp_grid['hidden_layer_sizes']:\n",
+    "        for act in mlp_grid['activation']:\n",
+    "            m = MLPClassifier(hidden_layer_sizes=sizes, activation=act, solver='sgd', alpha=1,\n",
+    "                                    learning_rate='adaptive', max_iter=1000)\n",
+    "            m.fit(X_train, Y_train)\n",
+    "            print(f'Model config: hidden_layer_sizes={sizes}, activation={act}')\n",
+    "            f1 = analysis(Y_test, m.predict(X_test))\n",
+    "            if f1 > best_f1:\n",
+    "                best_model = m\n",
+    "                best_f1 = f1\n",
+    "    return best_f1, best_model"
    ],
    "metadata": {
     "collapsed": false,
@@ -659,30 +659,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mlp_w2v = MLPClassifier()\n",
-    "mlp_w2v = GridSearchCV(estimator=mlp_w2v, param_grid=mlp_grid, **general_grid_params)\n",
-    "mlp_w2v.fit(X_train_w2v, Y_train_w2v)\n",
-    "print(f'Best Score: {mlp_w2v.best_score_}')\n",
-    "print(f'Best Params: {mlp_w2v.best_params_}')"
+    "w2v_f1, w2v_mlp = eval_mlp(X_train_w2v, X_test_w2v, Y_train_w2v, Y_test_w2v)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "analysis(Y_test_w2v, mlp_w2v.predict(X_test_w2v))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -696,7 +679,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -717,30 +701,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mlp_bow = MLPClassifier()\n",
-    "mlp_bow = GridSearchCV(estimator=mlp_bow, param_grid=mlp_grid, **general_grid_params)\n",
-    "mlp_bow.fit(X_train_bow, Y_train_bow)\n",
-    "print(f'Best Score: {mlp_bow.best_score_}')\n",
-    "print(f'Best Params: {mlp_bow.best_params_}')"
+    "bow_f1, bow_mlp = eval_mlp(X_train_bow, X_test_bow, Y_train_bow, Y_test_bow)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "analysis(Y_test_bow, mlp_bow.predict(X_test_bow))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -754,7 +721,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -775,17 +743,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mlp_idf = MLPClassifier()\n",
-    "mlp_idf = GridSearchCV(estimator=mlp_idf, param_grid=mlp_grid, **general_grid_params)\n",
-    "X_train_idf, X_test_idf, Y_train_idf, Y_test_idf = vectorize_data(X, Y, TfidfVectorizer(max_features=2000))\n",
-    "mlp_idf.fit(X_train_idf, Y_train_idf)\n",
-    "print(f'Best Score: {mlp_idf.best_score_}')\n",
-    "print(f'Best Params: {mlp_idf.best_params_}')"
+    "X_train_idf, X_test_idf, Y_train_idf, Y_test_idf = vectorize_data(X, Y, TfidfVectorizer(max_features=2000))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -794,13 +758,28 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "analysis(Y_train_idf, mlp_bow.predict(X_test_idf))\n",
+    "tf_idf_f1, tf_idf_mlp = eval_mlp(X_train_idf, X_test_idf, Y_train_idf, Y_test_idf)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "del X_train_idf, X_test_idf, Y_train_idf, Y_test_idf"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -822,17 +801,21 @@
    "outputs": [],
    "source": [
     "print('Best scores:')\n",
-    "print(f'W2V: {mlp_w2v.best_score_} with params: {mlp_w2v.best_params_}')\n",
-    "print(f'BoW: {mlp_bow.best_score_} with params: {mlp_bow.best_params_}')\n",
-    "print(f'MLP: {mlp_idf.best_score_} with params: {mlp_idf.best_params_}')\n",
-    "best_mlp = max(mlp_w2v, mlp_bow, mlp_idf, lambda mlp: mlp.best_score_)\n",
+    "print(f'W2V: {w2v_f1} with params: {w2v_mlp.get_params()}')\n",
+    "print(f'BoW: {bow_f1} with params: {bow_mlp.get_params()}')\n",
+    "print(f'Tf-Idf: {tf_idf_f1} with params: {tf_idf_mlp.get_params()}')\n",
+    "\n",
+    "idx = np.argmax([w2v_f1, bow_f1, tf_idf_f1])\n",
+    "best_mlp = [w2v_mlp, bow_mlp, tf_idf_mlp][idx]\n",
+    "\n",
     "with open('best.pkl', 'wb') as f:\n",
     "    pickle.dump(best_mlp, f)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
