Add some hyper-parameters for mlp.

--- a/phase1.ipynb
+++ b/phase1.ipynb
@@ -1031,7 +1031,8 @@
    "outputs": [],
    "source": [
     "mlp_grid = {\n",
-    "    'hidden_layer_sizes':[(500, 250), (1000, 250), (500, 250, 250),(1000, 500,250)],\n",
+    "    'hidden_layer_sizes': [(500, 250), (1000, 250), (500, 250, 250), (1000, 500, 250), (500, 250, 250, 5),\n",
+    "                           (1000, 500, 250, 5)],\n",
     "    'activation':['tanh', 'relu']\n",
     "}\n",
     "def eval_mlp(X_train, X_test, Y_train, Y_test):\n",
