--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -453,7 +453,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training Loss: (This approuch can't be used for unseen data)"
+    "## Training Loss\n",
+    "(This approuch can't be used for unseen data)"
    ],
    "metadata": {
     "collapsed": false,
