--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -453,7 +453,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Training Loss\n",
+    "## Performance on Train Data\n",
     "(This approuch can't be used for unseen data)"
    ],
    "metadata": {
